--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "hardhat-project",
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@synthetixio/core-contracts": "^1.1.0",
+    "@synthetixio/core-modules": "^1.0.0",
     "@synthetixio/hardhat-router": "^1.0.5"
   }
 }
